[gd_scene load_steps=10 format=3]

[ext_resource type="PackedScene" uid="uid://bp5dr3h8j1x2w" path="res://Scene/Base/BaseThroughLevel.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Level/Level_dsg_1.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://diwfo0c1b0k7l" path="res://Art/Level/Game3Level/Level_5/yc.png" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(6930, 1183)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(1052, 1205)
script = null

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(1036, 1205)
script = null

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(108, 1205)
script = null

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(1377, 2382.5)
script = null

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(781.5, 2191)
script = null

[node name="Level_dsg_1" instance=ExtResource( "1" )]
script = ExtResource( "2" )

[node name="floor" type="CollisionShape2D" parent="wall" index="2"]
position = Vector2(3461, 985.5)
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="stop1" type="CollisionShape2D" parent="wall" index="3"]
position = Vector2(1626, -122.5)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="stop2" type="CollisionShape2D" parent="wall" index="4"]
position = Vector2(2767, -119)
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="stop3" type="CollisionShape2D" parent="wall" index="5"]
position = Vector2(3553, -124)
shape = SubResource( "4" )
metadata/_edit_lock_ = true

[node name="stop4" type="CollisionShape2D" parent="wall" index="6"]
position = Vector2(5285.5, 462.75)
shape = SubResource( "5" )
metadata/_edit_lock_ = true

[node name="stop5" type="CollisionShape2D" parent="wall" index="7"]
position = Vector2(3208, 174.5)
shape = SubResource( "6" )
disabled = true
metadata/_edit_lock_ = true

[node name="Yc" type="Sprite2D" parent="BackGround/floor_2" index="0"]
position = Vector2(2351, 293)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="exit" parent="." index="10"]
position = Vector2(4330, 324)
metadata/_edit_lock_ = true
